# Indri

./: CMakeLists.txt  README.md
Catalogue/: CMakeLists.txt  Catalogue.cpp  Catalogue.hpp
ConfigContainer/: CMakeLists.txt  ConfigContainer.cpp  ConfigContainer.hpp
DataStructures/: BasicStar.cpp  BasicStar.hpp  CMakeLists.txt  CatalogueMasks.hpp  Coordinates.cpp  Coordinates.hpp  ModelParameters.cpp  ModelParameters.hpp
Docs/: Doxyfile.config
Executors/: 1M1GyrPopulation.cpp  CMakeLists.txt  DMChanger4YMW16.cpp  DMMaker.cpp  GalacticTests.cpp  MCMCChainCombiner.cpp  MCMCMaker.cpp  MCMCReadWrite.cpp  MCMCTester.cpp  Model.cpp  ModelTester.cpp  NSNSFlier.cpp  Pop1Per100.cpp  PopMeter.cpp  PopulationMaker.cpp  XmlReadWrite.cpp
Galaxy/: CMakeLists.txt  GalacticPotentialTests.cpp  Galaxy.cpp  Galaxy.hpp  PulsarDynamics.cpp  PulsarDynamics.hpp
HEALPix/: CMakeLists.txt  DMContainer.cpp  DMContainer.hpp
Input/: ATNF_MOD1.txt
MCMC/: CMakeLists.txt  MCMC.cpp  MCMC.hpp
NE2001/: CMakeLists.txt  NE2001.cpp  NE2001.f  NE2001.hpp  density.NE2001.f  dmdsm.NE2001.f  neLISM.NE2001.f  neclumpN.f  nevoidN.f
NeutronStar/: CMakeLists.txt  PulsarPhysics.cpp  PulsarPhysics.hpp
Population/: CMakeLists.txt  NSNS.cpp  NSNS.hpp  Population.cpp  Population.hpp  Pulsar.cpp  Pulsar.hpp
Projections/: CMakeLists.txt  Projections.cpp  Projections.hpp
Pugixml/: CMakeLists.txt
RadioDetector/: CMakeLists.txt  RadioDetector.cpp  RadioDetector.hpp  Survey.cpp  Survey.hpp  tsky1.ascii
Randomizer/: CMakeLists.txt  MersenneTwister.h  Randomizer.cpp  Randomizer.hpp
Scripts/: GetCalalogue.sh
Shared/: CMakeLists.txt  Definitions.hpp  MyMath.cpp  MyMath.hpp  Statistics.cpp  Statistics.hpp  strlcpy.cpp  strlcpy.hpp
Tools/: CMakeLists.txt  Debug.hpp  NANcinHandler.cpp  NANcinHandler.hpp  fortran.h
